99 - Stub single vocabulary item endpoint
