# src/main/java/it/teamdigitale/ndc/controller/VocabularyDataController.java
@@ -19,4 +19,9 @@ public class VocabularyDataController implements VocabulariesApi {
         Pageable pageable = OffsetBasedPageRequest.of(offset, limit);
         return ResponseEntity.ok(vocabularyDataService.getData(new VocabularyIdentifier(agencyId, keyConcept), pageable));
     }
+    //
+    //    @Override
+    //    public ResponseEntity<Map<String, String>> fetchVocabularyItem(String agencyId, String keyConcept, String id) {
+    //        return ResponseEntity.ok(Map.of("codice_1_livello", id, "label_ITA_1_livello", "Esempio"));
+    //    }
 }
